--- a/rundll/rundll.vcxproj
+++ b/rundll/rundll.vcxproj
@@ -163,7 +163,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\ShadowMap\fordll.h" />
+    <ClInclude Include="..\interfaces\fordll.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
