--- a/rundll/rundll.vcxproj.filters
+++ b/rundll/rundll.vcxproj.filters
@@ -23,13 +23,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\ShadowMap\fordll.h">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
     <ClInclude Include="stdafx.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
     <ClInclude Include="targetver.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="..\interfaces\fordll.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
