--- a/rundll/rundll.vcxproj.filters
+++ b/rundll/rundll.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="..\interfaces\fordll.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="..\interfaces\vector4d.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
